# metin-hard

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  MASTER_CONTEXT.md  README.md  SETUP.md  START.cmd  TROUBLESHOOTING.md  config.toml.example  main.py  test_output.txt
.kiro/steering/: 01-project-governance.md  02-development-workflow.md  03-review-standard.md  04-change-request-standard.md  05-reporting-standard.md  06-project-state.md
MetinHardLog_v2.0/: !URUCHOM_PROGRAM.cmd  README_ENG.md  README_PL.md  gui.py  main.py  pyproject.toml  run_silent.py
MetinHardLog_v2.0/launcher/: 02_Diagnostyka.cmd
MetinHardLog_v2.0/src/: auth.py  characters.py  config.py  config_writer.py  errors.py  export.py  models.py  retry.py  scraper.py
MetinHardLog_v2.0/tests/unit/: test_config.py
deployment/: 01-wymagania-systemowe.md  02-instalacja.md  03-konfiguracja.md  04-uruchomienie.md  05-rozwiazywanie-problemow.md  README.md  metin_hard_doctor.ps1  run.ps1  setup.ps1
deployment_V2/: README.md  START.cmd  config.toml.example  main.py
deployment_V2/launcher/: 01_Instalacja.cmd  03_Konfiguracja.cmd  05_Test_projektu.cmd  07_Informacje.cmd  09_Dokumentacja.cmd
deployment_V2/metin_hard_ucp_scraper.egg-info/: PKG-INFO
deployment_V2/src/: __init__.py  config.py  models.py  scraper.py
deployment_backup/: README.md  START.cmd  config.toml.example
deployment_backup/launcher/: 01_Instalacja.cmd  02_Diagnostyka.cmd  03_Konfiguracja.cmd  04_Pobierz_logi.cmd  05_Test_projektu.cmd  06_Aktualizacja.cmd  (+1 more)
metin_hard_ucp_scraper.egg-info/: SOURCES.txt
src/: config.py  models.py
(+17 files in other folders)
